--- a/action.yml
+++ b/action.yml
@@ -24,9 +24,38 @@ runs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
+    - name: Validate inputs
+      run: |
+        errors=()
+
+        if [[ -z "${{ inputs.gitlab_url }}" ]]; then
+          errors+=("gitlab_url is not set. Please add GITLAB_URL to your repository secrets.")
+        elif [[ ! "${{ inputs.gitlab_url }}" =~ ^https?://[^/]+/.+ ]]; then
+          errors+=("gitlab_url format is invalid. Expected: https://gitlab.com/user/repo.git")
+        fi
+
+        if [[ -z "${{ inputs.username }}" ]]; then
+          errors+=("username is not set. Please add USERNAME to your repository secrets.")
+        fi
+
+        if [[ -z "${{ inputs.gitlab_pat }}" ]]; then
+          errors+=("gitlab_pat is not set. Please add GITLAB_PAT to your repository secrets.")
+        fi
+
+        if [[ ${#errors[@]} -gt 0 ]]; then
+          echo "::error::Configuration Error(s):"
+          for err in "${errors[@]}"; do
+            echo "::error::  - $err"
+          done
+          echo ""
+          echo "To fix this, go to Settings > Secrets and variables > Actions in your GitHub repository."
+          exit 1
+        fi
+
+        echo "All inputs validated successfully."
+      shell: bash
     - name: Push to GitLab
       run: |
-        export GIT_SSH_COMMAND='ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
         gitlab_repo_url=${{ inputs.gitlab_url }}
         gitlab_repo_url=${gitlab_repo_url#https://}
         gitlab_repo_url_with_credentials="https://${{ inputs.username }}:${{ inputs.gitlab_pat }}@${gitlab_repo_url}"
