--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,7 @@ runs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
+        persist-credentials: false
     - name: Validate inputs
       run: |
         errors=()
