--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,10 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-    - uses: keninkujovic/gitlab-sync@2.1.0
+    - uses: keninkujovic/gitlab-sync@2.1.3
       with:
         gitlab_url: ${{ secrets.GITLAB_URL }}
         username: ${{ secrets.USERNAME }}
         gitlab_pat: ${{ secrets.GITLAB_PAT }}
+        force_push: true
             
